<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_windows</name>
  <version>0.0.0</version>
  <description>The rosneuro_windows package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="paolo@todo.todo">paolo</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosneuro_filters</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosneuro_filters</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosneuro_filters</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>eigen</depend>
  <depend>roslib</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
